# MeroSamasya_BE

./: .env.example  .gitignore  main.py  pyproject.toml
app/api/: all_nepal_location_routes.py  auth.py  auth_routes.py  category_routes.py  issue_routes.py  location_routes.py  problem_routes.py  profile_routes.py
app/api/v1/: auth.py  user.py
app/core/: cloudinary.py  database.py
app/dependencies/: auth.py  auth_deps.py
app/models/: models.py  nepal_location_models.py
app/schemas/: enum.py  nepal_location_schemas.py  nepal_location_schems.py  problem_schema.py  schema.py
app/services/: auth_service.py  category_service.py  issue_service.py  location_service.py  nepal_location_service.py  profile_service.py
