[project]
name = "merosamasya-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "pyjwt>=2.10.0",
    "passlib[argon2]>=1.7.4",
    "python-dotenv>=1.1.0",
    "pydantic[email]>=2.0.0",
    "cloudinary>=1.44.2",
    "python-multipart>=0.0.27",
]
